--- a/web/src/main/resources/templates/admin-list.html
+++ b/web/src/main/resources/templates/admin-list.html
@@ -104,7 +104,7 @@
                                     </li>
 
                                     <!-- 中间页 -->
-                                    <li th:each="pageNum:${#numbers.sequence(0, userList.getTotalPage() - 1)}">
+                                    <li th:if="${userList.getTotalPage() gt 0}" th:each="pageNum:${#numbers.sequence(0, userList.getTotalPage() - 1)}">
                                         <a th:href="'/adminListByPage?pageNum=' + ${pageNum}" th:text="${pageNum + 1}" th:if="${pageNum ne userList.getTotalPage()}"></a>
                                         <a th:href="'/adminListByPage?pageNum=' + ${pageNum}" th:text="${pageNum + 1}" th:if="${pageNum eq userList.getTotalPage()}" th:style="'font-weight:bold;background: #6faed9;'"></a>
                                     </li>
@@ -116,7 +116,7 @@
 
                                     <!-- 尾页 -->
                                     <li>
-                                        <a th:href="'/adminListByPage?pageNum=' + ${userList.getTotalPage() -1}">尾页</a>
+                                        <a th:if="${userList.getTotalPage() gt 0}" th:href="'/adminListByPage?pageNum=' + ${userList.getTotalPage() -1}">尾页</a>
                                     </li>
                                 </ul>
                             </div>
