新增 sk模块 新增zipkin服务链路追踪

--- a/web/src/main/resources/templates/well-info-list.html
+++ b/web/src/main/resources/templates/well-info-list.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html class="x-admin-sm" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 <head>
-    <th:block th:include="include :: header('角色列表')"/>
+    <th:block th:include="include :: header('井信息列表')"/>
 </head>
 <body>
 <div class="x-nav">
@@ -21,14 +21,14 @@
             <div class="layui-card">
                 <div class="layui-card-body ">
                     <form class="layui-form layui-col-space5" method="get" th:action="@{/findByNameLike}">
-                        <!--<div class="layui-inline layui-show-xs-block">
+                        <div class="layui-inline layui-show-xs-block">
                             <input class="layui-input"  autocomplete="off" placeholder="开始日" name="start" id="start">
                         </div>
                         <div class="layui-inline layui-show-xs-block">
                             <input class="layui-input"  autocomplete="off" placeholder="截止日" name="end" id="end">
-                        </div>-->
+                        </div>
                         <div class="layui-inline layui-show-xs-block">
-                            <input type="text" name="username"  placeholder="请输入角色名" autocomplete="off" class="layui-input">
+                            <input type="text" name="username"  placeholder="请输入井名称" autocomplete="off" class="layui-input">
                         </div>
                         <div class="layui-inline layui-show-xs-block">
                             <input type="submit" class="layui-btn"  >
@@ -38,7 +38,7 @@
                 </div>
                 <div class="layui-card-header">
                     <button class="layui-btn layui-btn-danger" onclick="delAll()"><i class="layui-icon"></i>批量删除</button>
-                    <button class="layui-btn" onclick="xadmin.open('添加角色','/roleAddPage',650,400)"><i class="layui-icon"></i>添加</button>
+                    <button class="layui-btn" onclick="xadmin.open('添加角色','/wellAddPage',650,400)"><i class="layui-icon"></i>添加</button>
                 </div>
                 <div class="layui-card-body ">
                     <table class="layui-table layui-form">
@@ -48,37 +48,36 @@
                                 <input type="checkbox"  lay-filter="selectAll"  id="selectAll"  lay-skin="primary">
                             </th>
                             <th>ID</th>
-                            <th>角色名</th>
-                            <th>角色值</th>
-                            <th>备注</th>
-
-                            <th>状态</th>
+                            <th>井ID</th>
+                            <th>完钻井深(m)</th>
+                            <th>油层套管规格(mm)</th>
+                            <th>施工状态</th>
                             <th>操作</th>
                         </thead>
-                        <tbody th:each="role:${roleList}" >
+                        <tbody th:each="well:${wellList}" >
                         <tr>
                             <td>
-                                <input type="checkbox" name="checkId" th:value="${role.roleId}"   lay-skin="primary">
+                                <input type="checkbox" name="checkId" th:value="${well.wid}"   lay-skin="primary">
                             </td>
-                            <td th:text="${role.roleId}" ></td>
-                            <td th:text="${role.roleName}" ></td>
-                            <td th:text="${role.roleKey}" ></td>
-                            <td >111</td>
+                            <td th:text="${well.wid}" ></td>
+                            <td th:text="${well.wellId}" ></td>
+                            <td th:text="${well.wellDeepCmplt}" ></td>
+                            <td th:text="${well.oilCasingType}"></td>
                             <td class="td-status" >
-                                <span th:if="${role.status} ne 1" class="layui-btn layui-btn-normal layui-btn-mini">已启用</span>
-                                <span th:if="${role.status} eq 1" class="layui-btn layui-btn-normal layui-btn-disabled layui-btn-mini">已停用</span>
+                                <span th:if="${well.status} ne 1" class="layui-btn layui-btn-normal layui-btn-mini">已启用</span>
+                                <span th:if="${well.status} eq 1" class="layui-btn layui-btn-normal layui-btn-disabled layui-btn-mini">已停用</span>
                             </td>
                             <td class="td-manage" >
-                                <a th:if="${role.status} ne 1" th:name="${role.roleId}" onclick="member_stop(this)" href="javascript:;"  title="启用">
+                                <a th:if="${well.status} ne 1" th:name="${well.wid}" onclick="member_stop(this)" href="javascript:;"  title="启用">
                                     <i class="layui-icon">&#xe601;</i>
                                 </a>
-                                <a th:if="${role.status} eq 1" th:name="${role.roleId}" onclick="member_stop(this)" href="javascript:;"  title="停用">
+                                <a th:if="${well.status} eq 1" th:name="${well.wid}" onclick="member_stop(this)" href="javascript:;"  title="停用">
                                     <i class="layui-icon">&#xe62f;</i>
                                 </a>
-                                <a title="编辑"  th:name="${role.roleName}"  onclick="roleUpdate1(this,'编辑','/roleEditPage')" href="javascript:;">
+                                <a title="编辑"  th:name="${well.wellId}"  onclick="wellUpdate1(this,'编辑','/wellEditPage')" href="javascript:;">
                                     <i class="layui-icon">&#xe642;</i>
                                 </a>
-                                <a title="删除" th:name="${role.roleId}" onclick="member_del(this)" href="javascript:;">
+                                <a title="删除" th:name="${well.wid}" onclick="member_del(this)" href="javascript:;">
                                     <i class="layui-icon">&#xe640;</i>
                                 </a>
                             </td>
@@ -92,28 +91,28 @@
 
                             <!-- 首页 -->
                             <li>
-                                <a th:href="'/roleListByPage?pageNum=0'">首页</a>
+                                <a th:href="'/wellInfoByPage?pageNum=0'">首页</a>
                             </li>
 
                             <!-- 上一页 -->
-                            <li th:if="${roleList.hasPrevious()}">
-                                <a th:href="'/roleListByPage?pageNum=' + ${roleList.getPageNo() - 1}" th:text="上一页"></a>
+                            <li th:if="${wellList.hasPrevious()}">
+                                <a th:href="'/wellInfoByPage?pageNum=' + ${wellList.getPageNo() - 1}" th:text="上一页"></a>
                             </li>
 
                             <!-- 中间页 -->
-                            <li th:if="${roleList.getTotalPage() gt 0}" th:each="pageNum:${#numbers.sequence(0, roleList.getTotalPage() - 1)}">
-                                <a th:href="'/roleListByPage?pageNum=' + ${pageNum}" th:text="${pageNum + 1}" th:if="${pageNum ne roleList.getTotalPage()}"></a>
-                                <a th:href="'/roleListByPage?pageNum=' + ${pageNum}" th:text="${pageNum + 1}" th:if="${pageNum eq roleList.getTotalPage()}" th:style="'font-weight:bold;background: #6faed9;'"></a>
+                            <li th:if="${wellList.getTotalPage() gt 0}" th:each="pageNum:${#numbers.sequence(0, wellList.getTotalPage() - 1)}">
+                                <a th:href="'/wellInfoByPage?pageNum=' + ${pageNum}" th:text="${pageNum + 1}" th:if="${pageNum ne wellList.getTotalPage()}"></a>
+                                <a th:href="'/wellInfoByPage?pageNum=' + ${pageNum}" th:text="${pageNum + 1}" th:if="${pageNum eq wellList.getTotalPage()}" th:style="'font-weight:bold;background: #6faed9;'"></a>
                             </li>
 
                             <!--下一页-->
-                            <li th:if="${roleList.hasNext()}">
-                                <a th:href="'/roleListByPage?pageNum=' + ${roleList.getPageNo() + 1}" th:text="下一页"></a>
+                            <li th:if="${wellList.hasNext()}">
+                                <a th:href="'/wellInfoByPage?pageNum=' + ${wellList.getPageNo() + 1}" th:text="下一页"></a>
                             </li>
 
                             <!-- 尾页 -->
                             <li>
-                                <a th:if="${roleList.getTotalPage() gt 0}" th:href="'/roleListByPage?pageNum=' + ${roleList.getTotalPage() -1}">尾页</a>
+                                <a th:if="${wellList.getTotalPage() gt 0}" th:href="'/wellInfoByPage?pageNum=' + ${wellList.getTotalPage() -1}">尾页</a>
                             </li>
                         </ul>
                     </div>
@@ -158,7 +157,7 @@
             console.log(id);
             if($(obj).attr('title')=='启用'){
                 $.ajax({
-                    url:'/roleStatus?id='+obj.name+"&status=1",
+                    url:'/wellStatus?id='+obj.name+"&status=1",
                     type:'get',
                     dataType:'json',
                     contentType: 'application/json',
@@ -183,7 +182,7 @@
 
             }else{
                 $.ajax({
-                    url:'/roleStatus?id='+obj.name+"&status=0",
+                    url:'/wellStatus?id='+obj.name+"&status=0",
                     type:'get',
                     dataType:'json',
                     contentType: 'application/json',
@@ -211,7 +210,7 @@
         });
     }
     // 用户修改
-    function roleUpdate1(obj,title,url){
+    function wellUpdate1(obj,title,url){
         var url1 = url +"/"+ obj.name;
         // console.log(url1);
         xadmin.open(title,url1);
@@ -222,7 +221,7 @@
             console.log("id:"+obj.name);
             //发异步删除数据
             $.ajax({
-                url:'/roleDeleteOne/'+obj.name,
+                url:'/wellDeleteOne/'+obj.name,
                 type:'get',
                 dataType:'json',
                 contentType: 'application/json',
