--- a/web/src/main/resources/templates/index.html
+++ b/web/src/main/resources/templates/index.html
@@ -63,14 +63,14 @@
                 <ul id="nav">
                     <li>
                         <a href="javascript:;">
-                            <i class="iconfont left-nav-li" lay-tips="用户管理">&#xe6b8;</i>
-                            <cite>用户管理</cite>
+                            <i class="iconfont left-nav-li" lay-tips="数据处理">&#xe6b8;</i>
+                            <cite>数据处理</cite>
                             <i class="iconfont nav_right">&#xe697;</i></a>
                         <ul class="sub-menu">
                             <li>
-                                <a onclick="xadmin.add_tab('统计页面','welcome1.html')">
+                                <a onclick="xadmin.add_tab('井信息列表','/wellInfoByPage')">
                                     <i class="iconfont">&#xe6a7;</i>
-                                    <cite>统计页面</cite></a>
+                                    <cite>井信息列表</cite></a>
                             </li>
                             <li>
                                 <a onclick="xadmin.add_tab('用户列表(静态表格)','member-list.html')">
