--- a/web/src/main/resources/templates/index.html
+++ b/web/src/main/resources/templates/index.html
@@ -44,7 +44,7 @@
                     <dl class="layui-nav-child">
                         <!-- 二级菜单 -->
                         <dd>
-                            <a onclick="xadmin.open('个人信息','http://www.baidu.com')">个人信息</a>
+                            <a onclick="xadmin.open('修改密码','rpass',400,500)">修改密码</a>
                         </dd>
                         <dd>
                             <a th:href="@{/logout}" href="./login.html">退出</a>
